Bug 1945715 - [devtools] Prevent unnecessary scrollbars on editor-container. r=bomsy,devtools-reviewers.
Differential Revision: https://phabricator.services.mozilla.com/D236668

--- a/devtools/client/debugger/src/components/App.css
+++ b/devtools/client/debugger/src/components/App.css
@@ -69,6 +69,11 @@ button:hover {
     var(--editor-footer-height);
   max-height: 100%;
   overflow-y: auto;
+  container-type: inline-size;
+
+  .source-header {
+    width: 100cqw;
+  }
 }
 
 .editor-notification-footer {
